2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Rework loop to call ‘pg-flush’ inside.

	* basic.scm (test:asynchronous-retrieval): ...here.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do/check ‘pg-get-result’ after ‘pg-put-copy-end’.

	* basic.scm (test:put-copy-data/end): ...here.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] No longer send "\\.\n" for COPY..STDIN.

	* basic.scm (test:put-copy-data/end, test:putline)
	(test:asynchronous-retrieval): Don't send "\\.\n".

2014-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Stash validated protocol version.

	* basic.scm (PVERS): New var.
	(test:protocol-version): Set ‘PVERS’.
	(test:transaction-status, test:set-error-verbosity)
	(test:fnumber-and-friends, test:pg-exec-params)
	(test:pg-exec-prepared, test:pg-exec-prepared)
	(test:asynchronous-notification)
	(test:asynchronous-retrieval): Use ‘PVERS’.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.45 (tag v0.45)

2012-12-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Set locale.

	* testing.scm: ...here, via ‘setlocale’ before everything.

2012-11-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add support for "make installcheck".

	* runtest.in (prefix): Don't set var if already in environment.
	* Makefile.am (installcheck-local): New target.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.44 (tag v0.44)

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add support for "make check KEEPD=1".

	* Makefile.am (check-local): If ‘KEEPD’ is 1, don't kill the daemon.

2012-04-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Allow for pre-PostgreSQL 8.1 ‘pg-client-encoding’ rv.

	* types-table.scm (mgr) <verify client encoding is UTF8>:
	Accept "UNICODE" as well as "UTF-8".

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.43 (tag v0.43)

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use a funky table name to exercise ‘validate-def’ a bit.
